--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "yiisoft/yii2-symfonymailer": "~2.0.3",
         "vlucas/phpdotenv": "^5.6@dev",
         "atellitech/utils-yii2": "dev-main",
-        "doctrine/annotations": "2.0.x-dev"
+        "doctrine/annotations": "2.0.x-dev",
+        "flow-php/etl": "^0.10.0",
+        "flow-php/etl-adapter-csv": "1.x-dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
