--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "doctrine/annotations": "2.0.x-dev",
         "flow-php/etl": "^0.10.0",
         "flow-php/etl-adapter-csv": "1.x-dev",
-        "myclabs/php-enum": "^1.8"
+        "myclabs/php-enum": "^1.8",
+        "flow-php/parquet": "1.x-dev",
+        "flow-php/etl-adapter-parquet": "1.x-dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
