--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "flow-php/etl-adapter-csv": "1.x-dev",
         "myclabs/php-enum": "^1.8",
         "flow-php/parquet": "1.x-dev",
-        "flow-php/etl-adapter-parquet": "1.x-dev"
+        "flow-php/etl-adapter-parquet": "1.x-dev",
+        "yiisoft/yii2-queue": "^2.0@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
