--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
         "irc": "ircs://irc.libera.chat:6697/yii",
         "source": "https://github.com/yiisoft/yii2"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
-        "php": ">=7.4.0",
+        "php": ">=8.1.0",
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
         "yiisoft/yii2-symfonymailer": "~2.0.3",
@@ -40,8 +40,8 @@
         "codeception/verify": "^3.0 || ^2.2",
         "symfony/browser-kit": "^6.0 || >=2.7 <=4.2.4",
         "friendsofphp/php-cs-fixer": "dev-master",
-        "phpstan/phpstan": "1.12.7",
-        "timeweb/phpstan-enum": "dev-master"
+        "phpstan/phpstan": "^2.0",
+        "timeweb/phpstan-enum": "^4.0"
     },
     "config": {
         "allow-plugins": {
