--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,9 @@ DB_DSN = mysql:host=127.0.0.1;dbname=db_name
 DB_USERNAME = root
 DB_PASSWORD = 
 
-AUTH_CLIENT_ID = 1234567890
-AUTH_CLIENT_SECRET = abcdefghijklmnopqrstuvwxyz
+AUTH_CLIENT_ID = 
+AUTH_CLIENT_SECRET = 
+
+SFTP_HOST =
+SFTP_USERNAME =
+SFTP_PASSWORD =
