--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "flow-php/parquet": "1.x-dev",
         "flow-php/etl-adapter-parquet": "1.x-dev",
         "yiisoft/yii2-queue": "^2.0@dev",
-        "guzzlehttp/guzzle": "^7.0"
+        "guzzlehttp/guzzle": "^7.0",
+        "hugsbrugs/php-sftp": "^1.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
